# video

./: CMakeLists.txt
cmake/: FindFFMPEG.cmake  FindLibEpoxy.cmake
source/: CMakeLists.txt  example.c  main.cpp
source/audio/: audio.cpp  audio.h
source/common/: task.cpp  task.h  timer.cpp  timer.h
source/os/: file.cpp  file.h  pipe.cpp  pipe.h  socket.cpp  socket.h  v4l.cpp  v4l.h
source/shaders/: simple.frag  simple.vert
source/video/: ffmpeg.cpp  ffmpeg.h  image.cpp  image.h  input.cpp  input.h  output.cpp  output.h  shader.cpp  shader.h  stream.cpp  stream.h  texture.cpp  texture.h  window.cpp  window.h
test/: CMakeLists.txt  test.cpp
